tests/ifcc-test-output/testfiles-comparatives-superiorStrict-supstrict_char_error_undeclared/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:14: error: ‘a’ undeclared (first use in this function)
    3 |     return b>a;
      |              ^
input.c:3:14: note: each undeclared identifier is reported only once for each function it appears in

return code: 1
